Fixed ROL-517: white spaces in calendar
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/roller/trunk@355195 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/themes/base.css
+++ b/web/themes/base.css
@@ -345,7 +345,6 @@ tr.hCalendarNextPrev {
 }
 td.hCalendarDayNotInMonth {
     font-size : x-small;
-    background-color: white;
     color: gray;
 }
 td.hCalendarDayCurrent {
